<resources>
    <string name="app_name">AppOrderFood</string>
    <string name="Menu">Menu</string>
    <string name="Enjoy">Enjoy</string>
    <string name="YourFood">Your Food</string>
    <string name="GetStarted">Get Started</string>
    <string name="Search">Search</string>
    <string name="All">All</string>
    <string name="Burger">Burger</string>
    <string name="Pizza">Pizza</string>
    <string name="Desert">Desert</string>
    <string name="Promotions">Promotions</string>
    <string name="TodayOffer">Today Offer</string>
    <string name="FreeBoxOfNuggets">Free Box Of Nuggets</string>
    <string name="OnAllOrderAbove">on all order above $150</string>
    <string name="Popular">Popular</string>
    <string name="BeefBurger">Beef Burger</string>
    <string name="CheesePizza">Cheese Pizza</string>
    <string name="s20">$20</string>
    <string name="s32">$32</string>
    <string name="s48">4.8</string>
    <string name="s45">4.5</string>
    <string name="BigJuicyBurger">Big juicy burger with cheese lettuce tomato onions and special sauce</string>
    <string name="PizzaDist">Pizza is a dish of Italian origin consisting of a usually round</string>
    <string name="AddOns">Add ons</string>
    <string name="AddToCart">Add to cart</string>
    <string name="ItemsInCart">Items in Cart</string>
    <string name="Noodles">Noodles</string>
    <string name="OrderInstructions">Order Instructions</string>
    <string name="Totals">Totals:</string>
    <string name="Checkout">Checkout</string>
    <string name="BackToMenu">Back to Menu</string>
    <string name="Back">Back</string>
    <string name="hello_world">Hello World</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="SignInToContinue">Sign In To Continue</string>
    <string name="UserName">Username*</string>
    <string name="Password">Password*</string>
    <string name="ConfirmPassword">Confirm Password*</string>
    <string name="ForgotPass">Forgot Password?</string>
    <string name="TermsAndPrivacy">Terms and Conditions | Privacy Policy</string>
    <string name="NewUserGetStartedNow">New User? Get Started Now</string>
    <string name="Next">Next</string>
    <string name="MyLobaceAccount">MY LOBACE ACCOUNT</string>
    <string name="Account">Account</string>
    <string name="Orders">Orders</string>
    <string name="RatingsReviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="AddressBook">Address Book</string>
    <string name="PaymentMethod">Payment Method</string>
    <string name="Settings">Settings</string>
    <string name="MySettings">MY SETTINGS</string>
    <string name="ChangePassword">Change Password</string>
    <string name="Logout">Logout</string>
    <string name="noodle">Noodle</string>
    <string name="sort_by">Sort by</string>
    <string name="related">Related</string>
    <string name="nearest">Nearest</string>
    <string name="bestsellers">Bestsellers</string>
</resources>