<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="@color/primary_color">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="115dp"
            android:background="#E4D1EE">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/MyLobaceAccount"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="175dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/account"/>

            <TextView
                android:id="@+id/txtView"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/Account"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="220dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/orders"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/Orders"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="265dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ratingsandreviews"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/RatingsReviews"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="309dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/addressbook"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/AddressBook"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="354dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/paymentmethod"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/PaymentMethod"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="399dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/settings"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/Settings"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="459dp"
            android:background="#E4D1EE">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/MySettings"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="505dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/ChangePassword"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="550dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/logout"/>

            <TextView
                android:id="@+id/txtLogout"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/Logout"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>