<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_color"
    android:paddingTop="@dimen/padding_super"
    android:paddingHorizontal="@dimen/padding_medium"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:src="@drawable/group_food"
        android:scaleType="centerInside"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_super"/>

    <TextView
        android:gravity="center"
        android:textAppearance="@style/BoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enjoy"/>

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/YourFood"
        android:textAppearance="@style/BoldText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_super"/>

    <Button
        android:id="@+id/btnStarted"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="241dp"
        android:layout_height="64dp"
        android:text="@string/GetStarted"
        android:textAppearance="@style/ThinText"
        android:textAllCaps="false"
        android:background="@drawable/button_border_radius"
        android:textColor="@color/black"/>
    
</LinearLayout>