<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="234dp">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:background="@drawable/header"/>

        <Button
            android:id="@+id/btnBackLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/sign_up_but"
            android:elevation="4dp"
            android:text="@string/Back"
            android:textAllCaps="true"
            android:textColor="#2F80ED"
            android:textSize="19dp" />
    </FrameLayout>

    <TextView
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#252525"
        android:text="@string/ForgotPass"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24dp">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/UserName"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/edtUsernameForgot"
            android:layout_width="356dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:background="@drawable/input"/>

        <Button
            android:id="@+id/btnNextPass"
            android:layout_width="356dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/signin_but"
            android:text="@string/Next"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/footer"/>


</androidx.constraintlayout.widget.ConstraintLayout>