<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="234dp">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:background="@drawable/header"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/sign_up_but"
            android:elevation="4dp"
            android:text="@string/SignUp"
            android:textAllCaps="true"
            android:textColor="#2F80ED"
            android:textSize="19dp" />
    </FrameLayout>

    <TextView
        android:layout_marginTop="-50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#252525"
        android:text="@string/SignInToContinue"
        android:textSize="24dp"
        android:layout_marginLeft="100dp">
    </TextView>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="40dp"
            android:layout_height="26dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/google_icon"/>

        <ImageView
            android:id="@+id/fb_icon"
            android:layout_width="27dp"
            android:layout_height="26dp"
            android:layout_marginLeft="90dp"
            android:background="@drawable/fb_icon"/>

        <ImageView
            android:id="@+id/tw_icon"
            android:layout_width="26dp"
            android:layout_height="25dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/tw_icon"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:background="#000000"/>

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"/>

        <View
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:background="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/UserName"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="356dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:background="@drawable/input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/Password"/>

        <TextView
            android:id="@+id/txtForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="10dp"
            android:text="@string/ForgotPass" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="356dp"
            android:layout_height="35dp"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:background="@drawable/input"/>

        <ImageButton
            android:id="@+id/hidePass"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/hide"
            android:background="@color/transparent80"
            android:scaleType="fitCenter"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="356dp"
            android:layout_height="35dp"
            android:layout_marginLeft="-348dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/signin_but"
            android:text="@string/SignIn"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginLeft="-330dp"
            android:layout_marginTop="110dp"
            android:gravity="center"
            android:text="@string/TermsAndPrivacy"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/footer"/>


</LinearLayout>